grammar.js
        source_file: $ => repeat($._line),
        _line: $ => prec("_line", seq(
            opt(pick(
                $.contextual_symbol,
                $.contextual_sequence,
                $.label_assignment,
                $._label,
                $._code_unit,
                [$._label, $._code_unit],
            )),
            $._EOL
        )),
        identifier: _ => /(\.)?[a-zA-Z_][a-zA-Z0-9_@\$]*/,

        comment: _ => immediate(
            ";",
            field("contents", /.*?/)
        ),
        _expression: $ => choice(
            prec(-1, seq("(", $._expression, ")")),
            $._literal,
            $.pseudo_variable,
            $.pseudo_function_call,
            $._symbol,
            $.unary_expression,
            $.binary_expression,
            $.cheap_label,
            $.unnamed_label_plus,
            $.unnamed_label_minus,
            $.PC
        ),
        _optionally_curly_expression: $ => pick(
            $._expression,
            ["{", $._expression, "}"],
        ),
        mnemonic: _ => caseless(strings.mnemonics.all),
        instruction: $ => prec.right(3,
            seq(
                field("mnemonic", $.mnemonic),
                optional_field("address", $._addressing_mode)
            )
        ),
    },
    labels: {
        _dollar_hex: _ => immediate(
            field("base_symbol", "$"),
            field("digits", /[a-fA-F0-9]+(_?[a-fA-F0-9]+)*/)
        ),
        _h_hex: _ => immediate(
            field("digits", /[a-fA-F0-9]+(_?[a-fA-F0-9]+)*/),
            field("base_symbol", /[hH]/),
        ),
        hex_literal: $ => choice(
            $._dollar_hex,
            $._h_hex,
        ),
        decimal_literal: _ => field("digits", /[0-9]+(_?[0-9]+)*/),
        string_literal: $ => choice(
            immediate(
                '"',
                field("contents",
                    repeat(choice(
                        "\\\\", // \\
                        "\\'", // \'
                        "\\\"", // \""
                        "\\t", // \t
                        "\\r", // \r
                        "\\n", // \n
                        /\\x[0-9A-F]{2}/, // \x01, \x9A, \xEF, ...
                        /[^"\n]/,
                    ))
                ),
                '"'
            ),
            immediate(
                "'",
                field("contents",
                    repeat(choice(
                        "\\\\", // \\
                        "\\'", // \'
                        "\\\"", // \""
                        "\\t", // \t
                        "\\r", // \r
                        "\\n", // \n
                        /\\x[0-9A-F]{2}/, // \x01, \x9A, \xEF, ...
                        /[^'\n]/,
                    ))
                ),
                "'"
            ),
        ),
    },
    pseudos: {
        pseudo_function: _ => caseless(strings.pseudo_functions.nominal),
        pseudo_function_call: $ => choice(
            $.ident_call,
            $.blank_call,
            $.nominal_pseudo_function_call
        ),

        blank_call: $ => seq(
            caseless_alias(".blank", $.pseudo_function),
            "(",
            field("argument", $._optionally_curly_expression),
            ")"
        ),

        // ident_keyword: _ => caseless(".ident"),
        control_command: $ => choice(
            $.nominal_control_command,
            $._exceptional_control_command,
        ),
        _exceptional_control_command: $ => choice(
            $.repeat_block,

            $.group_feature_command,
            $.single_feature_command,
            $.file_opt_command,

            $.enum_declaration,
            $.macro_declaration,
            $.proc_declaration,
            $.scope_declaration,
            $.struct_declaration,
            $.union_declaration,

            $.assert_statement,
            $.condes_statement,
            $.if_statement,
            $.set_statement,
        ),

        _addressing_mode: $ => prec(3, choice(
            $.absolute_address,
            $.immediate_mode,
            $.indexed_x,
            $.indexed_y,
            $.indirect_x,
            $.indirect_y,
            $.unnamed_label_plus,
            $.unnamed_label_minus,
        )),
        immediate_mode: $ => seq("#", $._expression),
