corpus/literals/decimals.txt
================================================================================
Decimal Number Literals
================================================================================


.out 1
.out 12
.out 123
adc #123
adc #123
adc # 123


--------------------------------------------------------------------------------

(source_file
  (control_command
    (decimal_literal))
  (control_command
    (decimal_literal))
  (control_command
    (decimal_literal))
  (instruction
    (mnemonic)
    (immediate_mode
      (decimal_literal)))
  (instruction
    (mnemonic)
    (immediate_mode
      (decimal_literal)))
  (instruction
    (mnemonic)
    (immediate_mode
      (decimal_literal))))
