corpus/literals/hex.txt
================================================================================
Hex Number Literals
================================================================================


.out $FF
.out $FF
.out ffh
.out FFh
.out Ffh
.out fFh


--------------------------------------------------------------------------------

(source_file
  (control_command
    (hex_literal))
  (control_command
    (hex_literal))
  (control_command
    (hex_literal))
  (control_command
    (hex_literal))
  (control_command
    (hex_literal))
  (control_command
    (hex_literal)))
