corpus/literals/string.txt
================================================================================
String Literals
================================================================================


.out "multi-line
string"
.include "this be a string"
.include .concat("this also be a string")
.include .concat("this", "be", "a", "concatenated", "string")


--------------------------------------------------------------------------------

(source_file
    (control_command
        (string_literal))
    (control_command
        (string_literal))
    (control_command
        (pseudo_function_call
            (pseudo_function)
            (string_literal)))
    (control_command
        (pseudo_function_call
            (pseudo_function)
            (string_literal)
            (string_literal)
            (string_literal)
            (string_literal)
            (string_literal))))
